@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: rollout.c,v 1.10 2000/01/19 17:01:12 gtw Exp $
+ * $Id: rollout.c,v 1.11 2000/01/31 17:52:16 gtw Exp $
  */
 
 #include "config.h"
@@ -25,6 +25,7 @@
 #include <math.h>
 #include <stdio.h>
 
+#include "backgammon.h"
 #include "dice.h"
 #include "eval.h"
 #include "positionid.h"
@@ -336,9 +337,11 @@ extern int Rollout( int anBoard[ 2 ][ 25 ], float arOutput[], float arStdDev[],
 	
 	SanityCheck( anBoard, ar ); /* FIXME think about this... */
 	
-	printf( "%6d\r", i + 1 );
-	fflush( stdout );
-
+	if( fShowProgress ) {
+	    printf( "%6d\r", i + 1 );
+	    fflush( stdout );
+	}
+	
 	ar[ OUTPUT_EQUITY ] = ar[ OUTPUT_WIN ] * 2.0 - 1.0 +
 	    ar[ OUTPUT_WINGAMMON ] +
 	    ar[ OUTPUT_WINBACKGAMMON ] -
